# dreamerv3

./: all_requirements.txt  example.py  pyproject.toml  requirements.txt
dreamerv3/: configs.yaml  main.py
embodied/core/: logger.py
submit_files/: run_agent.submit
submit_scripts/: example.submit
